fixed content push out of containers

--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ a:visited {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  flex-wrap: wrap;
   width: 90%;
 }
 
@@ -130,7 +131,7 @@ a:visited {
 */
 .about-paper {
   margin: 15px 100px 0px 100px;
-  height: 60vh;
+  min-height: 60vh;
   background-color: #C2CAD0 !important;
 }
 
